# Drone-Obstacle-Avoidance

./: README.md
clean up/: all_in_one.py  all_multi.py  cropping.py  diagonals.py  no_interrupt.py  pos_fly.py  streaming.py  testing_flight.py  visualization.py
clean up/model_weights/: multi_classify_best.pt
cnn/tutorial/: cascade.py  cropping.py  cropping_ex.py  trainCNN.py
fly_drone/: README.md  package.xml  setup.cfg  setup.py
fly_drone/config/: symbol_best.pt
fly_drone/fly_drone/: drone.py
fly_drone/fly_drone/modules/: helper.py
fly_drone/launch/: visual.launch.xml
flying_drone/: package.xml  setup.cfg  setup.py
flying_drone/config/: view_live_feed.rviz
flying_drone/flying_drone/: control.py  drone.py  vision.py
flying_drone/launch/: visual.launch.xml
flying_interfaces/: CMakeLists.txt  package.xml
full outlined/: for_portfolio.py  realtime_cascade_fly.py  realtime_cascade_no_fly  realtime_cascade_no_fly.py  realtime_predict_no_fly.py  sizing.py  trainCNN_pt.py  trial.py  yolo_cropping.py
model_dev/: README.md  crop_images_with_detector.py  detection_train_params.yaml  helper_crop.py  realtime_cascade_fly.py  realtime_cascade_no_fly.py  trainyaml.yaml  yolo_cascade.py  yolo_cropping.py  yolo_train_classifier.py  yolo_train_classifier_arrows.py  yolo_train_classifier_special.py  yolo_train_detection.py
models/: cascade.py  yolo_cascade.py
testing/: README.md  realtime_cascade_fly.py  realtime_cascade_no_fly.py  realtime_predict_no_fly.py  yolo_cascade.py
yolo_model/: customyaml.yaml  main.py  predict.py
(+2074 files in other folders)
